<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.chooselevelfragment.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/select_level"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/test_level" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/easy_level"
        android:backgroundTint="@color/color_btn_easy"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/normal_level"
        android:backgroundTint="@color/color_btn_normal"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/hard_level"
        android:backgroundTint="@color/color_btn_hard"/>

</LinearLayout>